--- a/css/jogar.css
+++ b/css/jogar.css
@@ -3,6 +3,8 @@
 margin: 0px;
 padding: 0px;	
 }
+
+/*MODIFICANDO A IMAGEM DE FUNDO*/
 body{
 	background: #B404AE;
 	
@@ -12,14 +14,14 @@ body{
 
 }
 
-
+/*ESTILIZANDO O VOLTA*/
 
 ul a{
 	font-family: "Sans-serif";
 	text-decoration: none;
 	color: rgb(0,255,255);
-	font-size: 50px;
-	padding: 4%;  
+	font-size: 40px;
+	padding: 3%;  
 	text-align: center;
 	display: flex;
 	justify-content: center;
@@ -28,29 +30,36 @@ ul a{
 	
 }
 
-#indentificador{
+/*ESTILIZANDO O INDENTIFICADOR PRA MOSTRAR QUEM VAI JOGAR*/
+
+.indentificador{
 	
 	margin: auto;
 	margin-top: 40px;
 	margin-bottom: 50px;
-    width: 255px;
+    width: 250px;
     height: 50px
-    font-size: 25px;
+    font-size: 45px;
     color: white;
 }
-
+/*ESTILIZANDO O ESPAÇO EM BRANCO DO TABULEIRO*/
 .espaço{
+	
 	width: 80px;
 	height: 80px;
 	border:3px solid #000;
-	float: left;
-
+	
+	 border-collapse: collapse;
+	 font-size: 40px;
+	 text-align: center;
+   
 
 }
+/*ESTILISANDO O TABULEIRO*/
+
 .tabuleiro{
+	 border-collapse: collapse;
 	background-color: #fff;
-	width: 430px;
-	height: 430px;
 	margin: auto;
 	margin-bottom: 50px;
 
